# IngestaoMercadoBitcoin

./: .gitignore  README.md  makefile  pyproject.toml  zappa_settings.json
.github/workflows/: develop.yml  feature_branch.yml  production.yml
mercado_bitcoin/: checkpoints.py  ingestors.py  lambda_function.py  main.py  writers.py
tests/: requirements.txt  test_api.py  test_ingestors.py  test_integration.py
