[tool.poetry]
name = "mercado-bitcoin-lambda"
version = "0.1.0"
description = ""
authors = ["cassianodescovi <cassianodescovi@gmail.com>"]
readme = "README.md"
packages = [{include = "mercado_bitcoin_lambda"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
ratelimit = "^2.2.1"
backoff = "^2.2.1"
boto3 = "^1.26.29"
schedule = "^1.1.0"


[tool.poetry.group.dev.dependencies]
zappa = "^0.56.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
